crates/dag-macros/tests/ui/workflow_connect_requires_into.stderr
error[E0277]: the trait bound `u8: From<std::string::String>` is not satisfied
  --> tests/ui/workflow_connect_requires_into.rs:31:26
   |
31 |     let producer = node!(produce_string);
   |                          ^^^^^^^^^^^^^^ the trait `From<std::string::String>` is not implemented for `u8`
   |
help: the following other types implement trait `From<T>`
  --> $RUST/core/src/convert/num.rs
   |
   | impl_from!(bool => u8);
   | ^^^^^^^^^^^^^^^^^^^^^^ `u8` implements `From<bool>`
   |
  ::: $RUST/core/src/ascii/ascii_char.rs
   |
   | into_int_impl!(u8 u16 u32 u64 u128 char);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `u8` implements `From<Char>`
   = note: required for `std::string::String` to implement `std::convert::Into<u8>`
note: required by a bound in `__dag_connect_assert`
  --> tests/ui/workflow_connect_requires_into.rs:26:1
   |
26 | / workflow! {
27 | |     name: connect_requires_into,
28 | |     version: "1.0.0",
29 | |     profile: Dev;
...  |
34 | |     connect!(producer -> consumer);
35 | | }
   | |_^ required by this bound in `__dag_connect_assert`
   = note: this error originates in the macro `impl_from` which comes from the expansion of the macro `workflow` (in Nightly builds, run with -Z macro-backtrace for more info)
